<resources>
    <string name="app_name">Handy Stalker</string>
    <string name="policies_privacy">http://www.google.com/policies/privacy</string>
    <string name="add_new_location">Add new location</string>

    <string name="setting_enabled" translatable="false">EnabledSetting</string>

    <!--MainActivity Buttons -->
    <string name="my_places">My Places</string>
    <string name="contacts">Contacts</string>
    <string name="my_rules">My rules</string>

    <!--Rules Buttons -->
    <string name="send_sms">Send SMS</string>
    <string name="send_rules">Stalking Rules</string>
    <string name="settings_rules">Handy Rules</string>

    <!--Dialog -->
    <string name="save">Save this place</string>
    <string name="cancel">Cancel</string>

    <string name="enter_name">Enter name of your place</string>

    <!--Permissions -->
    <string name="sms_permission">SMS Permission</string>
    <string name="sound_permission">Sound Permission</string>   `
    <string name="location_permission">Location Permission</string>
    <string name="enable_stalking">Enable Stalking</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>

    <!--Contacts-->
    <string name="phone_number_cc">phone number (with country code)</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="email">email@</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="save_my_stalker">Save my stalker</string>
    <string name="browse_my_contacts">Browse my contacts</string>
    <string name="update_contact">Update Contact</string>

    <string-array name="type_array">
        <item>arrival to </item>
        <item>departure from </item>
    </string-array>

    <string-array name="on_array">
        <item> on </item>
        <item> off </item>
    </string-array>

    <string name="add_new_rule">Add new rule</string>
    <string name="new_rule">New Rule</string>

    <!--Ads-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <!--Layout description-->
    <string name="app_image">Eye with location in the middle</string>
    <string name="sms_icon">SMS icon</string>
    <string name="location_icon">Location icon</string>
    <string name="geofencing_icon">Geofencing icon</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="delete_icon">Delete icon</string>
    <string name="edit_icon">Edit icon</string>
    <string name="volume_icon">Volume icon</string>
    <string name="wifi_icon">Wifi icon</string>
    <string name="place_icon">Place icon</string>
    <string name="contact_icon">Contact icon</string>
    <string name="rule_icon">Rule icon</string>

    <!--Text Rules-->
    <string name="send_sms_to">Send a message to</string>
    <string name="after_reaching">after reaching</string>
    <string name="from">from</string>
    <string name="save_sms_rule">Save SMS Rule</string>
    <string name="while_departuring_from">while departuring from</string>
    <string name="save_departuring_sms_rule">Save departuring SMS Rule</string>

    <!--Notification Rules-->
    <string name="notify_me_to_let">Notify me to let</string>
    <string name="know_about_my_safe">know about my safe</string>
    <string name="save_notification_rule">Save Notification Rule</string>
    <string name="arrival">Arrival</string>
    <string name="depart_from">Depart from</string>

    <!--Handy Rules-->
    <string name="turn_wi_fi">Turn Wi-Fi</string>
    <string name="while_in">while in</string>
    <string name="save_wi_fi_rule">Save Wi-fi Rule</string>
    <string name="turn_sound">Turn sound</string>
    <string name="sound">Sound</string>
    <string name="save_sound_rule">Save Sound Rule</string>
    <string name="wifi_permission">WiFi Permission</string>

    <string name="wifi_on_turn">Turn Wi-Fi ON.</string>
    <string name="wifi_of_turn">Turn Wi-Fi OFF.</string>
    <string name="sound_on_turn">Turn sound ON.</string>
    <string name="sound_off_turn">Turn sound OFF.</string>
    <string name="data_on_turn">Turn mobile data ON.</string>
    <string name="data_off_turn">Turn mobile data OFF.</string>

    <!--Widget-->
    <string name="call">Call</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="go_to_app">Set new rules!</string>
    <string name="reached">You recently reached</string>

    <!--List Item Description-->
    <string name="my_stalker">My Stalker:</string>
    <string name="arrival_to">Arrival:</string>
    <string name="departure_to">Departure:</string>
    <string name="place">Place:</string>

    <string name="stalker_update_toast">Stalker updated successfully</string>
    <string name="new_stalker_toast">New stalker saved successfully</string>

    <string name="rule_update_toast">Rule updated successfully</string>
    <string name="rule_saved_toast">Rule stalker saved successfully</string>

    <string name="message_update_toast">Text updated successfully!</string>
    <string name="new_message_toast">New text saved successfully</string>

    <!--Dialog-->
    <string name="set_place_name">Set name of your place</string>
    <string name="text_message">Hi, I arrived safely!</string>


    <!--Helpres for rule setting-->
    <string name="wifioff" translatable="false">wifioff</string>
    <string name="soundon" translatable="false">sound</string>
    <string name="soundoff" translatable="false">soundoff</string>
    <string name="wifi" translatable="false">wifi</string>

    <string name="you_arrived">You arrived!</string>
    <string name="safely_there">Safely there!</string>
    <string name="let">Let your beloved ones know!</string>
    <string name="know_about_you">know.</string>
    <string name="you_departured">You just departured!</string>
    <string name="know">know.</string>
    <string name="hi_i_am_home">Hi, I am home.</string>
    <string name="add_a_text_message">Add a Text Message</string>
    <string name="my_text_messages">My Text Messages</string>
    <string name="save_text">Save Text</string>
    <string name="notification">Notification</string>
    <string name="text_message_button">Text Message</string>
    <string name="my_texts">My Texts</string>
    <string name="message_icon">Message Icon</string>
    <string name="sms_rules">Text rules</string>
    <string name="add_text_rule_title">Add text rule</string>
    <string name="add_notification_rule">Add notification rule</string>
    <string name="notify_me_after_arrival">Notify me after arrival to</string>
    <string name="if_I_departured_from">if I recently departured from</string>
    <string name="notify_me_after_departuring_from">Notify me after departuring from</string>
    <string name="after_my_arrival_to">after my arrival to</string>
    <string name="add_sound_rule">Add sound rule</string>
    <string name="after_departuring_from">after departuring from</string>
    <string name="departure">Departure</string>
    <string name="with_text">with text</string>
    <string name="Hi">Hi! I just departured from</string>
    <string name="Hi_reaching">Hi! I just reached </string>
    <string name="safely">safely! Have a wonderful day!</string>
    <string name="anywhere">anywhere</string>
    <string name="default_message">default text</string>



    <string name="error_api_key" translatable="false">No API key defined in gradle.properties</string>
    <string name="pick_place">Pick place</string>
    <string name="option_get_place">Near me</string>
    <string name="default_info_title">Prague</string>
    <string name="default_info_snippet">University of Economics</string>
    <string name="select_from_nearby_places">Select from nearby places</string>
    <string name="channel_name">My stalkers are curious</string>
    <string name="channel_description">Channel for notifications about arrivals and departures.</string>
    <string name="location_off">Location is off.</string>
    <string name="only_100">Only 100 places allowed</string>
    <string name="one_contact">Add at least one contact first</string>
    <string name="one_place">Add at least one place first!</string>

    <string name="yes">Yes</string>
    <string name="delete">Delete?</string>
    <string name="delete_rule">Are you sure you want to delete this rule?</string>
    <string name="delete_place">Are you sure you want to delete this place? Linked rules will be deleted as well.</string>
    <string name="delete_contact">Are you sure you want to delete this contact? Linked rules will be deleted as well. </string>
    <string name="delete_message">Are you sure you want to delete this text? This text will be replaced with a default text for linked rules.</string>
    <string name="item_deleted">The item was successfully deleted</string>

    <!--Maps-->
    <string name="no_place_around">No Places of interest found around.  Try to press ´Nearby´ again after your location is found and blue circle appears.</string>
    <string name="place_added">Place was added successfully.</string>
    <string name="more_specific">This place can not be monitored. Try more specific address.</string>
    <string name="not_connected">You are not connected to the Internet. Connect and add new places.</string>
    <string name="not_working">Geofencing can not work properly!</string>
    <string name="geo_enabled">Geofencing is now enabled!</string>
    <string name="enable_high_accuracy">Enable high accuracy in location settings or Handy Stalker will not work properly!</string>

</resources>
