<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/add_new_contact"
            android:onClick="onAddSendRulesButtonClicked"
            android:text="@string/new_rule"
            android:textAppearance="@style/myButtonStyleSmall"
            android:textColor="@color/text_color_primary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/my_rules"
            android:textAppearance="@style/myDetailTitleStyle" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/handyrules_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="8dp" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>