<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical|end"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/add_new_contact"
            android:onClick="onAddNotificationRulesButtonClicked"
            android:text="@string/new_rule"
            android:textAppearance="@style/myDetailTitleStyle"
            android:textColor="@color/text_color_primary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/my_rules"
            android:textAppearance="@style/myDetailTitleStyle" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/notification_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="8dp" />



    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>