<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_text_rule_title"
            android:textAllCaps="true"
            android:textAppearance="@style/myDetailTitleStyle" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="start"
                style="@android:style/TextAppearance.Large"
                android:text="@string/send_sms_to" />

            <Spinner
                android:id="@+id/name_departure_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:background="@drawable/btn_dropdown"
                android:minHeight="12dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                style="@android:style/TextAppearance.Large"
                android:gravity="start"
                android:text="@string/after_departuring_from" />

            <Spinner
                android:id="@+id/departure_place_rule_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_dropdown"
                android:gravity="end"
                android:minHeight="12dp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="start"
                style="@android:style/TextAppearance.Large"
                android:text="@string/with_text" />

            <Spinner
                android:id="@+id/message_departure_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_dropdown"
                android:gravity="end"
                android:minHeight="12dp" />


        <Button
            android:id="@+id/departure_rule_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onSaveSendingRuleDepClick"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/save_departuring_sms_rule"
            android:textAppearance="@style/myButtonStyleSmall"
            android:textColor="@color/text_color_primary"
            app:srcCompat="@android:drawable/ic_menu_save" />
    </LinearLayout>


</ScrollView>