<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/rules_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        ads:layout_constraintBottom_toTopOf="@+id/adViewRules"
        ads:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/message_button"
            style="@style/myButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="44dp"
            android:background="@drawable/rounded_button"
            android:maxWidth="@dimen/button_width"
            android:onClick="onSMSButtonClicked"
            android:text="@string/send_rules" />


        <Button
            android:id="@+id/notification_button"
            style="@style/myButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="44dp"
            android:background="@drawable/rounded_button"
            android:maxWidth="@dimen/button_width"
            android:onClick="onSettingsButtonClicked"
            android:text="@string/settings_rules" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewRules"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
</android.support.constraint.ConstraintLayout>